# staticker

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
staticker/: __main__.py  app.py  collection.py  collections.py  communication.py  context.py  core.py  database.py  dependencies.py  folder.py  game.py  log.py  manager.py  player.py  session.py  statistic.py  statistics.py  time.py
staticker/routes/: event.py  game.py  player.py  statistics.py
staticker/static/: teststyle2.css
staticker/static/autocomplete/: new_event.js  source.txt
staticker/templates/: 404.html  about.html  base.html  event.html  events-overview.html  game.html  home.html  new_event.html  new_player.html  player-overview.html  player.html  session.html  sessions-overview.html  stats-event-overview.html  stats-event.html  stats-global.html  stats-overview.html  stats-player-overview.html  stats-player.html
staticker_arduino/: echo.py  test_serial_from_arduino_to_python.py  test_serial_from_arduino_to_python2.py
staticker_arduino/main/: main.ino
staticker_arduino/main2/: main2.ino
staticker_arduino/test_serial_from_arduino_to_python/: test_serial_from_arduino_to_python.ino
staticker_arduino/test_serial_from_python_to_arduino.py/: test_serial_from_python_to_arduino.py.ino
tests/: debugcollections.py  deletefolder.py  rebuild_db.py  syntheticdata.py  test_database.py  test_game.py  test_player.py  test_session.py  test_side.py  test_slot.py
