[tool.poetry]
name = "staticker"
version = "0.1.0"
description = ""
authors = ["leuchtum <acct.d-mueller@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
pony = "^0.7.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
