[tool.poetry]
name = "staticker"
version = "0.1.0"
description = ""
authors = ["leuchtum <acct.d-mueller@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.14.4"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
aiofiles = "^0.7.0"
Jinja2 = "^3.0.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
